crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_066_GxROM_Paris_Dakar_Rally_Special_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-066-GxROM/Paris-Dakar Rally Special (Japan).zip
rom_sha256=0d8040a16887bd3148cff92b8f100325c09abda5ba877fac9317eb32e1ed494d
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=445cf5e7750af272
checkpoint f900 fb_fnv1a64=448df99c8fa6c766
checkpoint f1100 fb_fnv1a64=448df99c8fa6c766
