crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_066_GxROM_Thunder_Lightning.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-066-GxROM/Thunder & Lightning.nes
rom_sha256=902074679cf3292b898eb153ddfe7a343cf340054b858ae0958cb4a6f6089b97
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=1121fb222471c263
checkpoint f900 fb_fnv1a64=245b4a48102de4ed
checkpoint f1100 fb_fnv1a64=a8094835e8d1afb0
