crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_067_Sunsoft3_Cybernoid_The_Fighting_Machine_U_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-067-Sunsoft3/Cybernoid - The Fighting Machine (U) [!].zip
rom_sha256=fd1c6dcade5261d26f997ba9cb552689dc022afe655699117610caa15ed468f5
frames=1141
fb_bytes=245760
cycles=33949780
audio_samples=836505
audio_fnv1a64=890201cb87487488
checkpoint f900 fb_fnv1a64=efb5fdf397f2fb76
checkpoint f1100 fb_fnv1a64=efb5fdf397f2fb76
