crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_067_Sunsoft3_Karate_Kid_The_U_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-067-Sunsoft3/Karate Kid, The (U) [!].zip
rom_sha256=9535d2210cd642005c71f7c7c87aa5fbfe12b700982fa22ef85bca3937b8edd6
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=7c092b22a9622ec1
checkpoint f900 fb_fnv1a64=9d644c3324d08475
checkpoint f1100 fb_fnv1a64=9d644c3324d08475
